# heyMovie/src/main/java/com/entities/Genre.java
@@ -1,0 +1,23 @@
+package com.entities;
+
+import jakarta.persistence.*;
+import lombok.*;
+
+import java.util.Set;
+
+@Entity
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class Genre {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    private String titre;
+
+    @ManyToMany(mappedBy = "genres")
+    private Set<Movie> movies;
+}
